force-app/main/default/objects/Project__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Framework Template that will be plugged into the project which will determine the project requirements.</description>
    <label>Framework</label>
    <referenceTo>Framework__c</referenceTo>
    <relationshipName>Regulyst_Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>