force-app/main/default/objects/Project__c/fields/Project_Focus__c.field-meta.xml
<CustomField>
    <fullName>Project_Focus__c</fullName>
    <description>This defines the focus of the project. This will vary depending on the Standards Alignment Framework Body &amp; Framework chosen.</description>
    <label>Project Focus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Audit Preperation</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>