force-app/main/default/objects/Project__c/fields/Standards_Alignment_Body__c.field-meta.xml
<CustomField>
    <fullName>Standards_Alignment_Body__c</fullName>
    <label>Standards Alignment Body</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>DORA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>