force-app/main/default/objects/Project__c/fields/Standards_Alignment_Framework__c.field-meta.xml
<CustomField>
    <fullName>Standards_Alignment_Framework__c</fullName>
    <description>Defines the Standard Alignment Framework as part of the project.</description>
    <label>Standards Alignment Framework</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Standards_Alignment_Body__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISO 27001</fullName>
            </value>
            <value>
                <fullName>DORA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>